Fix dropdown flickering issue by removing unnecessary mouseenter/leave events on NavDropdown component

--- a/client/src/App/Layout/Header/Navbar/Navbar.scss
+++ b/client/src/App/Layout/Header/Navbar/Navbar.scss
@@ -28,12 +28,6 @@
                     transform: translateY(-50%);
                     margin-left: auto;
                 }
-
-                &:hover {
-                    +.dropdown {
-                        display: block;
-                    }
-                }
             }
         }
     }
